force-app/main/default/objects/Class__c/fields/Adding__c.field-meta.xml
<CustomField>
    <fullName>Adding__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Class is still adding if checked.</inlineHelpText>
    <label>Adding</label>
    <type>Checkbox</type>
</CustomField>