force-app/main/default/objects/Class__c/fields/Capacity__c.field-meta.xml
<CustomField>
    <fullName>Capacity__c</fullName>
    <label>Capacity</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>