force-app/main/default/objects/Class__c/fields/Class_Price__c.field-meta.xml
<CustomField>
    <fullName>Class_Price__c</fullName>
    <label>Class Price</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Class_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>$75</fullName>
                <default>true</default>
                <label>$75</label>
            </value>
            <value>
                <fullName>$150</fullName>
            </value>
            <value>
                <fullName>$200</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>