force-app/main/default/objects/Class__c/fields/Class_Time__c.field-meta.xml
<CustomField>
    <fullName>Class_Time__c</fullName>
    <label>Class Time</label>
    <required>true</required>
    <type>Time</type>
</CustomField>