force-app/main/default/objects/Class__c/fields/InstructorEmail__c.field-meta.xml
<CustomField>
    <fullName>InstructorEmail__c</fullName>
    <formula>Instructor__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>InstructorEmail</label>
    <type>Text</type>
</CustomField>