force-app/main/default/objects/Class__c/fields/InstructorName__c.field-meta.xml
<CustomField>
    <fullName>InstructorName__c</fullName>
    <formula>Instructor__r.FirstName + &apos; &apos; +  Instructor__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>InstructorName</label>
    <type>Text</type>
</CustomField>