force-app/main/default/objects/Class__c/fields/InstructorPhone__c.field-meta.xml
<CustomField>
    <fullName>InstructorPhone__c</fullName>
    <formula>Instructor__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>InstructorPhone</label>
    <type>Text</type>
</CustomField>