force-app/main/default/objects/Class__c/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <label>Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Intro to Splash</fullName>
            </value>
            <value>
                <fullName>Ripple 101</fullName>
            </value>
            <value>
                <fullName>Ripple 201</fullName>
            </value>
            <value>
                <fullName>Ripple 301</fullName>
            </value>
            <value>
                <fullName>Ripple 401</fullName>
            </value>
            <value>
                <fullName>Ripple 501</fullName>
            </value>
            <value>
                <fullName>Wave 101</fullName>
            </value>
            <value>
                <fullName>Wave 201</fullName>
            </value>
            <value>
                <fullName>Wave 301</fullName>
            </value>
            <value>
                <fullName>Wave 401</fullName>
            </value>
            <value>
                <fullName>Wave 501</fullName>
            </value>
            <value>
                <fullName>Surf 201</fullName>
            </value>
            <value>
                <fullName>Surf 301</fullName>
            </value>
            <value>
                <fullName>Surf 401</fullName>
            </value>
            <value>
                <fullName>Surf 501</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>