force-app/main/default/objects/Class__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Class_Time__c</columns>
    <columns>Day__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Adding__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>