force-app/main/default/objects/Class__c/listViews/Class_Available_For_Adding.listView-meta.xml
<ListView>
    <fullName>Class_Available_For_Adding</fullName>
    <columns>NAME</columns>
    <columns>Start_Date__c</columns>
    <columns>Class_Time__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Adding__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Class Available For Adding</label>
</ListView>