force-app/main/default/objects/Class__c/listViews/Group_Lessons.listView-meta.xml
<ListView>
    <fullName>Group_Lessons</fullName>
    <columns>NAME</columns>
    <columns>Level__c</columns>
    <columns>Instructor__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Class_Type__c</field>
        <operation>equals</operation>
        <value>Group</value>
    </filters>
    <label>Group Lessons</label>
</ListView>