force-app/main/default/objects/Class__c/listViews/Tuesday_Lessons.listView-meta.xml
<ListView>
    <fullName>Tuesday_Lessons</fullName>
    <columns>NAME</columns>
    <columns>Instructor__c</columns>
    <columns>Level__c</columns>
    <columns>Class_Time__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Day__c</field>
        <operation>equals</operation>
        <value>Tuesday</value>
    </filters>
    <label>Tuesday Lessons</label>
</ListView>